tests/NormalTests/paczka1/fuzzy1/70664242.err
Error in line 3: C9vE7bVQekN S288 13,95
Error in line 1: eGoz S300 54,1
Error in line 8: C9vE7bVQekN S288 24,8
Error in line 21: qJ3y0eGxJyM S288 59,2
Error in line 32: qJ3y0eGxJyM S288 317,i
Error in line 18: 3I1al S271 36,1
Error in line 31: qJ3y0eGxJyM S288 71,8
